[package]
name = "warm"
version = "0.1.0"
edition = "2021"
description = "An experimental rendering framework built on top of Vulkan."
authors = ["Nils Mathieu <nils.mathiue.contact@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
ash = { version = "0.37", default-features = false, features = ["default"] }
libloading = { version = "0.8", default-features = false }
raw-window-handle = { version = "0.6", default-features = false }
bitflags = { version = "2", default-features = false }
