[package]
name = "warm-core"
version = "0.1.0"
edition = "2021"
description = "The core library of the `warm` graphics framework."
authors = ["Nils Mathieu <nils.mathiue.contact@gmail.com>"]
license = "MIT"
readme = "../README.md"

[dependencies]
ash = { version = "0.37", default-features = false }
libloading = "0.8"
raw-window-handle = "0.6"
bitflags = "2"
